--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 html, body {
   font-family: "Inter", sans-serif;
   color: white;
-  background: linear-gradient(60deg,black, #000000, #020202, #010101, #010101);    
+  background: linear-gradient(60deg,black, black, #020202, black, black);    
   background-size: 400% 400%;
-  animation: gradientMove 17s ease infinite;
+  animation: gradientMove 10s ease infinite;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -36,10 +36,10 @@ html, body {
 }
 
 
-body > * {
-  width: 33%;
+/* body > * {
+  max-width: 33%;
   margin-left: 33%;
-}
+} */
 
 br {
   display: block;
